[package]
name = "grist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
configparser = {version = "1.0.0"}
ini = {version = "1.3.0"}
simple-error = {version = "0.2"}