[package]
name = "grist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
configparser = {version = "1.0.0"}
env_logger = {version = "0.9.1"}
hex = {version = "0.4.3"}
ini = {version = "1.3.0"}
log = {version = "0.4.17"}
serde = {version = "1.0.145"}
sha1 = {version = "0.10.0"}
simple-error = {version = "0.2"}